# CLI-RAG

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-16-local-course-rag-cli.md
docs/superpowers/specs/: 2026-06-16-local-course-rag-cli-design.md
src/crag/: cli.py  config.py  db.py  delete.py  embeddings.py  ingest.py  models.py  ocr.py  openers.py  render.py  search.py  tui.py
tests/: conftest.py  test_cli.py  test_db.py  test_delete.py  test_embeddings.py  test_ingest.py  test_openers.py  test_render.py  test_search.py  test_tui.py
tests/fixtures/: mistral_ocr_pdf.json  mistral_ocr_pptx.json
