[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crag"
version = "0.1.0"
description = "Local course material search CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mistralai>=1.6.0",
  "numpy>=1.26.0",
  "rich>=13.7.0",
  "sentence-transformers>=3.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
crag = "crag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
